--- a/LFTCLab5/LFTCLab5/LFTCLab5.csproj
+++ b/LFTCLab5/LFTCLab5/LFTCLab5.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Grammar.cs" />
+    <Compile Include="SearchTree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
