--- a/LFTCLab5/LFTCLab5/LFTCLab5.csproj
+++ b/LFTCLab5/LFTCLab5/LFTCLab5.csproj
@@ -44,11 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="Nonterminal.cs" />
     <Compile Include="Parser.cs" />
+    <Compile Include="Production.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Grammar.cs" />
     <Compile Include="SearchTree.cs" />
+    <Compile Include="Terminal.cs" />
+    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
