--- a/LFTCLab5/LFTCLab5/LFTCLab5.csproj
+++ b/LFTCLab5/LFTCLab5/LFTCLab5.csproj
@@ -43,16 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration.cs" />
-    <Compile Include="Nonterminal.cs" />
+    <Compile Include="Model\Configuration.cs" />
+    <Compile Include="Model\Nonterminal.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="Production.cs" />
+    <Compile Include="Model\Production.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Grammar.cs" />
     <Compile Include="SearchTree.cs" />
-    <Compile Include="Terminal.cs" />
-    <Compile Include="Token.cs" />
+    <Compile Include="Model\Terminal.cs" />
+    <Compile Include="Model\Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -60,5 +60,6 @@
   <ItemGroup>
     <Content Include="grammar.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
